Bug 1867091 - Fix "Get selected messages" command. r=BenC

- Enable the "Get selected messages" command when applicable.
- Remove partial messages that have been completed by this command.
- Fix activity message in status bar.

Differential Revision: https://phabricator.services.mozilla.com/D200827

--HG--
extra : moz-landing-system : lando