mailnews/local/src/Pop3Client.jsm
@@ -1127,6 +1127,7 @@ class Pop3Client {
             [UIDL_FETCH_BODY, UIDL_DELETE].includes(uidlState.status)
           ) {
             // Fetch the full message.
+            this._newMessageTotal++;
             this._messagesToHandle.push({
               ...uidlState,
               messageNumber,
